; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/process_keycode/extr_process_combo.c_send_combo.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/process_keycode/extr_process_combo.c_send_combo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@current_combo_index = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i32)* @send_combo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @send_combo(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i64, i64* %3, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %17

7:                                                ; preds = %2
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %7
  %11 = load i64, i64* %3, align 8
  %12 = call i32 @register_code16(i64 %11)
  br label %16

13:                                               ; preds = %7
  %14 = load i64, i64* %3, align 8
  %15 = call i32 @unregister_code16(i64 %14)
  br label %16

16:                                               ; preds = %13, %10
  br label %21

17:                                               ; preds = %2
  %18 = load i32, i32* @current_combo_index, align 4
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @process_combo_event(i32 %18, i32 %19)
  br label %21

21:                                               ; preds = %17, %16
  ret void
}

declare dso_local i32 @register_code16(i64) #1

declare dso_local i32 @unregister_code16(i64) #1

declare dso_local i32 @process_combo_event(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
